# caffe

./: .gitignore  CMakeLists.txt
cmake/: ConfigGen.cmake  Dependencies.cmake  Targets.cmake
cmake/Modules/: FindGFlags.cmake
cmake/Templates/: caffe_force_tempate_instantiation.h.in
examples/: CMakeLists.txt
python/: CMakeLists.txt
python/caffe/: _caffe.cpp
scripts/: caffe_gen_template_class_list.ps1  patch_xml.txt
src/caffe/: CMakeLists.txt
src/caffe/layers/: conv_layer.cu
src/caffe/test/: CMakeLists.txt
src/gtest/: gtest.h
tools/: CMakeLists.txt  caffe.cpp
